--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ before_install:
 - pip install codecov
 install:
 - pip install -r requirements.txt
-script: nosetests --with-coverage --cover-inclusive --cover-package=pipes
+script: nosetests --with-coverage --cover-inclusive --cover-package=carson
 after_success:
 - codecov
