--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ install:
 - pip install -r requirements.txt
 script: nosetests --with-coverage --cover-inclusive --cover-package=carson
 after_success:
-- codecov
+- bash <(curl -s https://codecov.io/bash)
